# sentinel-env

./: .gitattributes  .gitignore  BLOG.md  Dockerfile  README.md  SENTINEL_ARCHITECTURE.md  UI_MIGRATION.md  adversary.py  app.py  atlas_state.json  audit_ledger.py  behavioral_atlas.py  cluster_rewards.py  cluster_trust_env.py  cluster_workers.py  comms_bus.py  counterfactual_grader.py  difficulty_controller.py  environment.py  gpu_pool.py  graders.py  inference.py  job_queue.py  mission_context.py  models.py  openenv.yaml  pyproject.toml  requirements-train.txt  requirements.txt  run_baseline.py  scenarios.py  sentinel_config.py  specialists.py  task_graph.py  trust_ledger.py
docs/: GPU_CLUSTER_ROADMAP.md  ROLL_OUT.md  TRAINING_RUNBOOK.md
docs/diagrams/: VISUAL_SYSTEM.md
outputs/: baseline_scores.json  cluster_health_history.json  eval_pre.json  evaluation_results.json  reward_report_task3_seed42.json  trained_policy_replay.jsonl
scripts/: backend_walkthrough.py  cluster_trust_walkthrough.py  reward_logic_walkthrough.py
server/: __init__.py  app.py
static/: index.html
tests/: test_adversary.py  test_app.py  test_audit_ledger.py  test_cluster_rewards.py  test_cluster_trust_env.py  test_environment.py  test_gpu_pool.py  test_graders.py  test_job_queue.py  test_specialists.py  test_wow_features.py
training/: colab_notebook.ipynb  evaluate.py  evaluate_cluster.py  evaluate_transfer.py  launch_hf_job.py  plot_training.py  plots.py  replay.py  run_eval_with_grpo.sh  train.py  train_sigma.py
ui/: package-lock.json  package.json
ui/app/: globals.css  layout.tsx  (+1 more)
(+20 files in other folders)
